--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -11,16 +11,14 @@
   <meta property="og:title" content="{{ .Title }}">
   <meta property="og:description" content="{{if .IsHome}}{{$data.description | default $.Site.Data.config.description}}{{else}}{{.Summary}}{{end}}">
   <meta property="og:type" content="website">
-<!--  <meta property="og:image" content="{{.Site.BaseURL}}icon.png">-->
-  <meta property="og:image" content="https://s.gravatar.com/avatar/4e9916981adb804e1db438874e3789c6?s=800">
+  <meta property="og:image" content="{{.Site.BaseURL}}icon.png">
   <meta property="og:url" content="{{ .Permalink }}">
   <meta property="og:width" content="200">
   <meta property="og:height" content="200">
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="{{ .Title }}" />
   <meta name="twitter:description" content="{{if .IsHome}}{{$data.description | default $.Site.Data.config.description}}{{else}}{{.Summary}}{{end}}" />
-<!--  <meta name="twitter:image" content="{{.Site.BaseURL}}icon.png">-->
-  <meta name="twitter:image" content="https://s.gravatar.com/avatar/4e9916981adb804e1db438874e3789c6?s=800">
+  <meta name="twitter:image" content="{{.Site.BaseURL}}icon.png">
   {{ range $data.links }}
     {{ if strings.Contains .link "twitter.com" }}
       {{ $twitter_handle := index (split .link "/") (sub (len (split .link "/")) 1) }}
